# UberEats-Pricing-Restaurant-Classification-Models

./: README.md
kandidate/: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
kandidate/.github/workflows/: ci.yml
kandidate/config/: default.yaml
kandidate/docs/: api_reference.md  architecture.md  contributing.md  installation.md  issues.md  overview.md  roadmap.md  usage.md
kandidate/kandidate/: __init__.py  __main__.py  cli.py
kandidate/kandidate/core/: __init__.py  pipeline.py
kandidate/kandidate/models/: __init__.py  candidate.py  config.py
kandidate/kandidate/services/: __init__.py  analyzer.py  api.py  parser.py  repository.py
kandidate/kandidate/utils/: __init__.py  config_loader.py  exceptions.py  logging.py
kandidate/scripts/: dev_server.sh  format.sh
kandidate/tests/: test_analyzer.py  test_api.py  test_cli.py  test_config_loader.py  test_parser.py  test_pipeline.py  test_repository.py
